# vo-cmpe460

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  opencv.cmake  settings.ini  toolchain.cmake
Cfg/: ActiveLoggerImplCfg.hpp  AiConstants.txt  CommandDispatcherImplCfg.hpp  FpConfig.hpp  OsCfg.hpp  StandardTypes.hpp  VoCarCfg.h
Drv/: CMakeLists.txt
Drv/I2cMux/: I2cMuxImpl.cc  I2cMuxImpl.h
Drv/RpiGpioDriver/: CMakeLists.txt  RpiGpioDriverImpl.cc  RpiGpioDriverImpl.h
Drv/RpiI2cDriver/: CMakeLists.txt  RpiI2cDriverComponentAi.xml  RpiI2cDriverImpl.cc  RpiI2cDriverImpl.h
Drv/RpiSocketIpDriver/: CMakeLists.txt  RpiSocketHelper.cpp  RpiSocketHelper.hpp  RpiSocketIpDriverComponentAi.xml  RpiSocketIpDriverComponentImpl.cpp  RpiSocketIpDriverComponentImpl.hpp
Drv/RpiSpiDriver/: RpiSpiDriverComponentAi.xml  RpiSpiDriverImpl.cc  RpiSpiDriverImpl.h  SpiDmaReplyPortAi.xml  SpiStatusEnumAi.xml  Telemetry.xml
Kernel/: CMakeLists.txt  README.md
Kernel/bare_metal/: CMakeLists.txt
Kernel/bare_metal/Os/: CMakeLists.txt  FIFOBufferQueue.cpp  File.cpp  FileSystem.cpp  RPIFs.cpp  RPIFs.h  RPIQueue.cpp  RPIQueue.h  Task.cpp  libc.cc
Kernel/rt_linux/: CMakeLists.txt
Kernel/rt_linux/Test/: CMakeLists.txt  TestCam.cc
Kernel/rt_linux/Top/: CMakeLists.txt  Components.hpp  RpiRTLinuxTopologyAppAi.xml  Topology.cc  main.cc
Os/: CMakeLists.txt  File.cpp  FileSystem.cpp  Mutex.cpp  Queue.cpp  RPIQueue.cpp  RPIQueue.h  Task.cpp  libc.c  libc.cc  syscalls.c  syscalls.cc  uprintf.h
Rpi/: CMakeLists.txt
Rpi/Cam/: CMakeLists.txt  CamCfg.h  CamComponentAi.xml  CamImpl.cc  CamImpl.h  CamListenerEnumAi.xml  CamRequest.cc  CameraConfig.h  Commands.xml  Events.xml  Frame.h  LibCamera.cpp  LibCamera.h  Parameters.xml  Telemetry.xml  ardu_cam.cc  ardu_cam.h  ov2640.cc  ov5642.cc
Rpi/Cam/Ports/: CMakeLists.txt  CamFrame.cc  CamFrame.h  CamFrameDeallocatePortAi.xml  CamFrameSendPortAi.xml  CamListenerPortAi.xml  CameraFrameSerializableAi.xml
Rpi/Cam/Types/: CMakeLists.txt  CameraAwbEnumAi.xml  CameraExposureEnumAi.xml  CameraJpegSizeEnumAi.xml  CameraLightModeEnumAi.xml  CameraSpecialEffectEnumAi.xml
Rpi/Cam/core/: libcamera_app.cc  libcamera_app.h  post_processor.cpp
Rpi/Cam/old/: LibCamera.cpp
Rpi/Display/: CMakeLists.txt  DisplayComponentAi.xml  DisplayImpl.cc  DisplayImpl.h  oled.cc  oled.h
Rpi/FrameBuffer/: FrameBuffer.h
Rpi/FramePipe/: CMakeLists.txt  FramePipeComponentAi.xml  FramePipeImpl.cc  FramePipeImpl.h
Rpi/Logger/: Logger.cc
Rpi/Mot/: CMakeLists.txt  Commands.xml  Events.xml  MotComponentAi.xml  MotImpl.cc  MotImpl.h  Parameters.xml
Rpi/Nav/: CMakeLists.txt  Commands.xml  Events.xml  NavAlgorithm.cc  NavAlgorithm.h  NavAlgorithmTypeEnumAi.xml  NavComplex.cc  NavComponentAi.xml  NavImpl.cc  NavImpl.h  NavParams.h  NavPid.cc  NavSimple.cc  Parameters.xml  Telemetry.xml  pid_tuning.py
Rpi/SpiCam/: CamBufferSendPortAi.xml  CamComponentAi.xml  CamImpl.h  CamIntF.xml  CamRequest.cc  Events.xml  README.md  Telemetry.xml  ardu_cam_i2c.cc  ov2640.cc
Rpi/SystemTime/: SystemTimeImpl.cc  SystemTimeImpl.h
Rpi/Test/: CMakeLists.txt  TestComponentAi.xml  TestImpl.cc  TestImpl.h
Rpi/Top/: CMakeLists.txt  Components.hpp  RpiRTLinuxTopologyAppAi.xml  RpiTopologyAppAi.xml  Topology.cc  kernel.h  main.cc
Rpi/VideoStreamer/: CMakeLists.txt  PracticalSocket.cc  PracticalSocket.h  VideoStreamerCfg.h  VideoStreamerComponentAi.xml  VideoStreamerImpl.cc  VideoStreamerImpl.h
Rpi/VideoStreamer/encoder/: h264_encoder.cpp
Rpi/VideoStreamer/output/: output.hpp
Rpi/VideoStreamer/preview/: drm_preview.cpp  preview.hpp
Rpi/Vis/: CMakeLists.txt  Commands.xml  Events.xml  Parameters.xml  VisComponentAi.xml  VisImpl.cc  VisImpl.h  VisInterpolationEnumAi.xml  VisListenerEnumAi.xml  VisPipeEnumAi.xml  VisPipeline.cc  VisPipeline.h  VisRecord.cc  VisRecord.h  test.c
boot/: .gitignore
cmake/: api.cmake  build.cmake  dict.cmake  fprime.cmake  fprime_code.cmake  module.cmake  options.cmake  required.cmake  settings.cmake  topology_template.cmake  utilities.cmake
cmake/autocoder/: ai-impl.cmake  ai-xml-proto.cmake  ai-xml.cmake  autocoder-template.cmake  autocoder.cmake  default.cmake  fpp-proto.cmake  fpp.cmake  generate.py
cmake/platform/: bare_metal-code.cmake  bare_metal-toolchain.cmake  bare_metal.cmake  rt_linux-code.cmake  rt_linux-toolchain-clang.cmake  rt_linux-toolchain-gcc.cmake  rt_linux-toolchain.cmake  rt_linux.cmake
dict/: RPITopologyAppAi_IDTableLog.txt  RPITopologyAppDictionary.xml  RPITopologyAppID.csv
dict/channels/: cmdDisp_channels.html  cmdSeq_channels.html  rg10hz_channels.html  rg1hz_channels.html  rg20hz_channels.html  rg40hz_channels.html  rg50hz_channels.html  test_channels.html
dict/commands/: cmdDisp_commands.html  cmdSeq_commands.html  eventLogger_commands.html  prmDb_commands.html
dict/events/: cmdDisp_events.html  cmdSeq_events.html  eventLogger_events.html  prmDb_events.html  rg10hz_events.html  rg1hz_events.html  rg20hz_events.html  (+3 more)
fpp/: fpp-syntax
opencv/: CMakeLists.txt
opencv/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
opencv/include/opencv4/opencv2/: cvconfig.h
opencv/lib/cmake/opencv4/: OpenCVModules-debug.cmake  OpenCVModules.cmake
report/: .gitignore  biograph.sty  block  camera.drawio  report.blg  report.tex  track  wiring.drawio  ~$block.dtmp
scripts/: serial_to_tcp.py  upload_kernel.sh  upload_linux_fsw.sh  upload_manual.sh
seq/: cam_configure.seq  cam_home.seq  cam_rit.seq  cam_stream.seq  chess.seq  contour.seq  pose_calibration.seq  quad.seq  race.seq  race_test.seq  report.seq  undistort.seq  warp.seq  warp_calibration.seq
src/: CMakeLists.txt  vo_car.h
src/Rpi/: CMakeLists.txt  Components.hpp  RpiTopologyAppAi.xml  Topology.cc  blinky_main.cc  kernel.h  main.cc
src/evr/: CMakeLists.txt  README.md  evr.cc  evr.h
src/kernel/: CMakeLists.txt  blinky_main.cc  kernel.h  main.cc
staging/: .dockerignore
test/: CMakeLists.txt  blinky_main.cc
usbboot/: CMakeLists.txt  main.c
(+166 files in other folders)
